Forgot to add new to testpage

--- a/testing/index.html
+++ b/testing/index.html
@@ -9,7 +9,7 @@
 	
 	<script src="../js/modules/utils.js"></script>
 	<script>/*<![CDATA[*/
-var $scope = modules.Scope();
+var $scope = new modules.Scope();
 
 $scope.$register('simple', 12);
 $scope.$register('complex', [{a:12}, {a:16}]);
